--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -17,9 +17,13 @@ h5{font-size: 1.6rem; letter-spacing: 0; line-height: 1.4}
 h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
 pre{padding: 1em;}
 
+.app-container {
+  min-height: 100vh;
+}
 .container{
-  margin: 0 auto;
-  max-width: 80.0rem;
+  width: 100%;
+  /* margin: 0 auto; */
+  /* max-width: 80.0rem; */
   padding: 0 2.0rem;
   position: relative;
   width: 100%
@@ -57,7 +61,6 @@ header {
   width: 100%;
   background: #fdfdfd;
   border-bottom: 1px solid #eaeaea;
-  margin-bottom: 2rem;
 }
 header section {
   align-items: center;
